support/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: api
  name: api
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: api
  type: ClusterIP
