support/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        add_header  Content-Security-Policy "default-src 'self';frame-ancestors 'self';style-src 'self';script-src 'self';img-src 'self';font-src 'self'";
        add_header  X-Frame-Options SAMEORIGIN;
        add_header  X-Content-Type-Options nosniff;
        add_header  Referrer-Policy no-referrer;
spec:
  rules:
    - host: demo.gilfoyle.dreamvo.com
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - demo.gilfoyle.dreamvo.com
      secretName: gilfoyle-demo-tls
